--- a/source/form.html
+++ b/source/form.html
@@ -3,28 +3,35 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Кэт энерджи</title>
+    <link href="https://fonts.googleapis.com/css?family=Oswald:400,500&display=swap&subset=cyrillic"
+    rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-      <header class="header">
-          <a class="header__logo">
-            <img class="header__logo-image" src="#logo_cat" alt="Здоровое питание для кошек «CAT ENERGY»">
-          </a>
-          <img class="header__image" src="#logo_cat1" alt="«CAT ENERGY»">
-          <h2 class="visually-hidden">CAT ENERGY</h2>
-          <nav class="header__menu">
-            <ul class="site-list">
-              <li class="site-list__item">
-                <a href="index.html">ГЛАВНАЯ</a>
-              </li>
-              <li class="site-list__item">
-                <a href="catalog.html">КАТАЛОГ ПРОДУКЦИИ</a>
-              </li>
-              <li class="site-list__item site-list__item--active">
-                <a>ПОДБОР ПРОГРАММЫ</a>
-              </li>
-            </ul>
-          </nav>
-      </header>
+    <header class="header">
+      <a class="header__logo">
+        <img class="header__logo-image" src="img/logo-mobile.svg" width="191" height="39" alt="Здоровое питание для кошек «CAT ENERGY»">
+      </a>
+      <h2 class="visually-hidden">CAT ENERGY</h2>
+      <button type="button" class="burger">
+        <svg version="1.1" id="Layer" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="25px" height="19px" viewBox="0 0 18 18" style="enable-background:new 0 0 18 18;" xml:space="preserve">
+          <polygon points="18,1.3 16.7,0 9,7.7 1.3,0 0,1.3 7.7,9 0,16.7 1.3,18 9,10.3 16.7,18 18,16.7 10.3,9 "/>
+        </svg>
+      </button>
+      <nav class="header__menu">
+        <ul class="site-list">
+          <li class="site-list__item site-list__item--active">
+            <a class="site-list__link">ГЛАВНАЯ</a>
+          </li>
+          <li class="site-list__item">
+            <a href="catalog.html" class="site-list__link">КАТАЛОГ ПРОДУКЦИИ</a>
+          </li>
+          <li class="site-list__item">
+            <a href="form.html" class="site-list__link">ПОДБОР ПРОГРАММЫ</a>
+          </li>
+        </ul>
+      </nav>
+     </header>
       <main class="main">
         <section class="program">
             <h1 class="main__head">Подбор программы</h1>
@@ -34,48 +41,48 @@
         </section>
         <form action="https://echo.htmlacademy.ru" method="post" class="program-form">
           <fieldset class="cat-data" >
-          <label for="cat-name" class="cat-data__label">Имя:*</label>
+          <label for="cat-name" class="cat-data__label program-form__data">Имя:*</label>
           <input type="text" id="cat-name" name="name" placeholder="Барсик" required class="cat-data__name">
-          <label for="cat-weight" class="cat-data__label">Вес (кг):*</label>
+          <label for="cat-weight" class="cat-data__label program-form__data ">Вес (кг):*</label>
           <input type="text" id="cat-weight" name="weight" placeholder="7" required class="cat-data__name">
-          <label for="cat-age" class="cat-data__label">Возраст (лет):*</label>
+          <label for="cat-age" class="cat-data__label program-form__data">Возраст (лет):*</label>
           <input type="text" id="cat-age" name="age" placeholder="7" class="cat-data__name">
         </fieldset>
         <fieldset class="cat-aspiration">
           <input type="radio" id="slim" name="aspiration" value="slim" checked class="cat-aspiration__check">
-          <label for="slim" class="cat-aspiration__label">Похудение</label>
+          <label for="slim" class="cat-aspiration__label program-form__data">Похудение</label>
           <input type="radio" id="pro" name="aspiration" value="pro" class="cat-aspiration__check">
-          <label for="pro" class="cat-aspiration__label">Набор массы</label>
+          <label for="pro" class="cat-aspiration__label program-form__data">Набор массы</label>
           <input type="radio" id="help" name="aspiration" value="help" class="cat-aspiration__check">
-          <label for="help" class="cat-aspiration__label">Не знаю (нужен ваш совет)</label>
+          <label for="help" class="cat-aspiration__label program-form__data">Не знаю (нужен ваш совет)</label>
         </fieldset>
         <fieldset class="owner-data">
           <h2 class="program-form__head">Контактные данные (владельца кота)</h2>
           <p class="owner-mail">
-            <label for="mail">e-mail:*</label>
+            <label for="mail" class="program-form__data">e-mail:*</label>
             <input type="email" id="mail" name="owner-mail" placeholder="kuklachev@gmail.com" required class="owner-mail__name">
             <!--картинка-->
           </p>
           <p class="owner-phone">
-            <label for="phone">Телефон:*</label>
+            <label for="phone" class="program-form__data">Телефон:*</label>
             <input type="tel" id="phone" name="owner-phone" placeholder="8(960)900-60-90" required class="owner-phone__name">
             <!--картинка-->
           </p>
         </fieldset>
         <fieldset class="cat-info">
           <label for="about" class="program-form__head">Комментарий</label>
-          <textarea id="about" name="about-cat" rows="5" class="cat-info__text">расскажите обо всех повадках кота
+          <textarea id="about" name="about-cat" rows="5" class="cat-info__text program-form__data">расскажите обо всех повадках кота
           </textarea>
         </fieldset>
         <fieldset class="cat-addition">
           <h2 class="program-form__head">Дополнительно</h2>
-          <label for="sugar" class="cat-addition__label">Сахарозаменитель</label>
+          <label for="sugar" class="cat-addition__label program-form__data ">Сахарозаменитель</label>
           <input type="checkbox" id="sugar" name="add-sugar" checked class="cat-addition__check">
-          <label for="water" class="cat-addition__label">Питьевая вода</label>
+          <label for="water" class="cat-addition__label program-form__data">Питьевая вода</label>
           <input type="checkbox" id="water" name="add-water" class="cat-addition__check">
-          <label for="milk" class="cat-addition__label">Молоко</label>
+          <label for="milk" class="cat-addition__label program-form__data">Молоко</label>
           <input type="checkbox" id="milk" name="add-milk" class="cat-addition__check">
-          <label for="vitamin" class="cat-addition__label">Витамины</label>
+          <label for="vitamin" class="cat-addition__label program-form__data">Витамины</label>
           <input type="checkbox" id="vitamin" name="add-vitamin" class="cat-addition__check">
         </fieldset>
         <button type="submit" class="button">Отправить заявку</button>
@@ -83,35 +90,66 @@
       </form>
       </main>
       <footer class="footer">
-          <section class="welcome">
-              <p class="welcome__partnership">Приглашаем к сотрудничеству диллеров!</p>
-              <p class="welcome__adress">ул.Большая Конюшенная, д. 19/8</p>
-          </section>
-        <!--А тут будет карта-->
-        <img class="footer__image" src="#logo_cat1" alt="«CAT ENERGY»">
-        <ul class="footer__smm-list smm-list">
+        <section class="welcome">
+            <p class="welcome__partnership">Приглашаем к сотрудничеству диллеров!</p>
+            <p class="welcome__adress">ул.Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+        </section>
+       <img class="footer__map" src="img/bg-map-mobile@1x.png" width="320" height="400" alt="«CAT ENERGY»">
+      <img class="footer__image" src="img/logo-footer.svg" width="128" height="24" alt="«CAT ENERGY»">
+      <ul class="footer__smm-list smm-list">
           <li class="smm-list__item">
             <a href="#">
-              <img src="#icon_vk" class="smm-list__icon" alt="Вконтакте">
+              <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="22" height="12"
+	               viewBox="0 0 22 12" style="enable-background:new 0 0 22 12;" xml:space="preserve">
+                 <path d="M17.6,12c-0.3,0-0.9-0.1-1.5-0.5c-0.5-0.3-0.9-0.7-1.3-1.2c-0.3-0.3-0.9-0.9-1.1-0.9c-0.2,0.1-0.4,0.7-0.3,1.2
+	               c0,0.1,0,0.6-0.3,0.9c-0.3,0.3-0.8,0.4-0.9,0.4h-1.4c-0.7,0-3.2-0.2-5.4-2.3C2.5,7.1,0.2,2.2,0.1,2C0,1.6-0.1,1.2,0.2,0.9
+	              s0.8-0.4,1-0.4h3.1c0.1,0,0.4,0.1,0.7,0.3C5.3,1,5.4,1.3,5.5,1.4c0.7,1.5,1.5,2.8,2.6,4C8.2,5,8.3,4,8.2,3.1c0-0.4-0.1-0.8-0.2-1
+	              C7.9,2,7.7,1.9,7.5,1.9L6.9,1.4c0-0.5,0.5-0.9,0.9-1.1C8.3,0.1,9.1,0,10.1,0h0.5c0.9,0,1.2,0.1,1.6,0.1c1.2,0.3,1.2,1.3,1.1,2.5v1.6
+	              c0,0.3,0,0.8,0.1,1c0.2-0.1,0.6-0.5,1.5-1.9c0.6-0.9,1-1.9,1.1-2.1c0.1-0.3,0.4-0.7,1.2-0.7h3.4c0.7,0,1.2,0.2,1.3,0.7
+	              c0.2,0.5,0.1,1.3-1.7,3.5c-0.3,0.3-0.5,0.6-0.7,0.9c-0.5,0.4-0.9,1-0.9,1.1s0.5,0.5,0.9,0.9c1.1,0.9,1.9,1.7,2.2,2.3
+	              c0.4,0.6,0.3,1,0.2,1.3c-0.3,0.7-1.2,0.7-1.4,0.8h-2.8C17.7,12,17.6,12,17.6,12z M13.7,8.3c0.7,0,1.2,0.6,1.8,1.2
+	              c0.4,0.4,0.7,0.8,1.1,1c0.5,0.3,1,0.3,1,0.3h2.9c0.1,0,0.3-0.1,0.4-0.1c0,0,0-0.1-0.1-0.1c-0.3-0.5-1-1.3-2-2.1
+	              c-0.9-0.7-1.3-1.1-1.4-1.7c0-0.6,0.4-1.1,1.2-2.1c0.2-0.2,0.4-0.5,0.7-0.8c1.1-1.4,1.4-2,1.5-2.3h-3.9c0,0.4-0.5,1.5-1.1,2.4
+	              c-1.4,2.1-2,2.4-2.5,2.4c-0.1,0-0.3,0-0.4-0.1c-0.7-0.4-0.7-1.4-0.7-2.1V3.9V2.6c0.1-1.3,0-1.3-0.3-1.4c-0.3-0.1-0.5-0.1-1.4-0.1H10
+	              c-0.5,0-1,0-1.4,0.1l0.2,0.2c0.4,0.5,0.4,1.5,0.4,1.7c0.1,1.3,0,2.9-0.7,3.3c-0.1,0-0.2,0.1-0.4,0.1C7.5,6.5,6.8,5.8,5.6,4
+	              C5,2.9,4.5,1.8,4.5,1.8s0-0.1-0.1-0.1S4.2,1.6,4.2,1.6H1.3H1.2c0.4,0.9,2.5,5,4.8,7.2c2,1.9,4.3,2,4.7,2h1.4c0,0,0.2,0,0.2-0.1v-0.1
+	              c0-0.2,0-2,1.2-2.3C13.5,8.3,13.7,8.3,13.7,8.3z"/>
+             </svg>
             </a>
           </li>
           <li class="smm-list__item">
             <a href="#">
-              <img src="#icon_inst" class="smm-list__icon" alt="Insagram">
+              <svg version="1.1" id="Layer_2" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="17" height="17"
+	               viewBox="0 0 16.1 16" style="enable-background:new 0 0 16.1 16;" xml:space="preserve">
+                 <style type="text/css">
+	               .st0{fill:#231F20;}
+                  </style>
+                <path class="st0" d="M11.8,1C13.6,1,15,2.4,15,4.2v7.7c0,1.7-1.4,3.1-3.1,3.1H4.2C2.4,15,1,13.6,1,11.8V4.2C1,2.4,2.4,1,4.2,1H11.8
+	               M11.8,0H4.2C1.9,0,0,1.9,0,4.2v7.7C0,14.1,1.9,16,4.2,16h7.7c2.3,0,4.2-1.9,4.2-4.2V4.2C16,1.9,14.1,0,11.8,0z"/>
+                <path class="st0" d="M8,4.9c1.7,0,3.1,1.4,3.1,3.1S9.7,11.1,8,11.1S4.9,9.7,4.9,8S6.3,4.9,8,4.9 M8,3.9C5.7,3.9,3.9,5.7,3.9,8
+	              s1.8,4.1,4.1,4.1s4.1-1.8,4.1-4.1S10.3,3.9,8,3.9z"/>
+                <circle class="st0" cx="12.3" cy="3.7" r="0.9"/>
+              </svg>
             </a>
           </li>
           <li class="smm-list__item">
-             <a href="#">
-               <img src="#icon_fb" class="smm-list__icon" alt="Facebook">
+            <a href="#">
+              <svg version="1.1" id="Layer_3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="10" height="19"
+	             viewBox="0 0 10 19" style="enable-background:new 0 0 10 19;" xml:space="preserve">
+               <path d="M7.1,19H2v-8.8H0V5.8h1.9C1.8,3.8,2.1,2.4,3,1.4C3.8,0.5,5,0.1,6.5,0H10v4.2H7.2C7.1,4.4,7,5,7,5.8h3v4.4H7.1V19z M3.1,18
+	             h2.8V9.1h2.9V6.8H5.9V6.3c0-1.4,0-2.6,0.7-3.1l0.1-0.1h2.1V1H6.5c-1.2,0.1-2,0.4-2.6,1c-0.8,0.8-1,2.3-0.8,4.2l0.1,0.6H1.1v2.3h2V18
+	             z"/>
+              </svg>
             </a>
-            </li>
-        </ul>
-        <p class="footer__html-academy html-academy">
-              HTML Academy
+          </li>
+      </ul>
+      <p class="footer__html-academy html-academy">
+          HTML Academy
           <a href="https://htmlacademy.ru">
-              <img class="html-academy__logo" alt="HTML Academy" src="#">
+            <img class="html-academy__logo" alt="HTML Academy" src="img/htmlacademy.svg" width="27" height="34" >
           </a>
-        </p>
-      </footer>
+      </p>
+    </footer>
+
   </body>
 </html>
